# BSeQC2pkg

./: .gitignore  README.mkd  configure.ac
src/: Makefile.am
src/bseqc2/: Makefile.am  bseqc2.cpp
tests/: LC1_chr_1k.bam  LC1_chr_1k.bam.bai  main.sh  note.txt  result.txt  result_mbias_pe.txt  result_mbias_strand.txt
tests/exitcode/: main.sh
tests/main/: main.sh  pair.sh
tests/old/: note.txt
tests/se/: T1L1.bam.bai  main.sh  note.txt
tests/se/outdir/: result.txt  result_mbias_strand.txt
